--- a/covid-survey/package.json
+++ b/covid-survey/package.json
@@ -10,12 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "expo": "~44.0.0",
     "expo-dev-client": "~0.8.4",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.8",
+    "formik": "^2.2.9",
     "native-base": "^3.3.7",
     "react": "17.0.1",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-date-picker": "^4.2.0",
